--- a/DNA/index.html
+++ b/DNA/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>DNA & Helia Студия</title>
+  <title>DNA</title>
   <!-- Шрифт Roboto Mono -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet"/>
   <style>
@@ -92,7 +92,7 @@
 </head>
 <body>
   <header class="header">
-    <h1>DNA & Helia Студия</h1>
+    <h1>DNA & Студия</h1>
   </header>
   <main class="container">
     <!-- 1. Шифратор ДНК -->
